frontend/test/should_pass/basic_061.grg
using basic_model_002;

rule r {
	x : A;
	y : B;
	z : C;
	n : N;

	replace {
		eval {
			n.in = 42;
		}
	}
}

