frontend/test/should_fail/attrib_089.grg
using attrib_model_001;

rule dummy {

  replace {
    i:NINT;
    eval { i.notthere = 42; }
  }
}
